--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "10.0.8",
+    "@contentful/rich-text-react-renderer": "^15.5.1",
+    "apollo-boost": "^0.4.9",
+    "contentful": "^9.1.4",
+    "graphql": "^16.0.1",
+    "next": "^12.0.2",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-apollo": "^3.1.5",
+    "react-dom": "17.0.1",
+    "serverless-mysql": "^1.5.4"
   }
 }
