--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export":"npm run build && next export"
+    "export":"npm run build && next export && mv out _static"
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.5.1",
